Commit de atualizações gerais

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+
+
   <body>
     <header class="hero">
       <div class="hero__content">
-        <img src="assets/nathalye-matos1.png" alt="Nathalie Matos" class="hero__image" />
+        <img src="assets/nathalye-matos1.jpeg" alt="Nathalie Matos" class="hero__image" />
         <h1 class="hero__name">NATHALYE MATOS</h1>
         <h2 class="hero__title">NUTRICIONISTA</h2>
         <p class="hero__tagline">Nutrição com leveza, ciência e propósito</p>
@@ -25,26 +29,45 @@
       <div class="container">
         <h2>Sobre mim</h2>
         <p>
-          Sou nutricionista apaixonada por promover a saúde com base em evidências científicas. Atuo com foco em reeducação alimentar, bem-estar e qualidade de vida, oferecendo atendimento personalizado para cada fase e objetivo do paciente.
+          Sou nutricionista com foco em emagrecimento e esporte, e criadora do <strong>Método Leveza</strong>. A minha maior motivação é ajudar os meus pacientes a conquistarem seus objetivos de forma prazerosa, SEM abrirem mão do que gostam de comer, através de uma dieta que leve em consideração a rotina, preferências alimentares e os objetivos de cada um.
         </p>
       </div>
     </section>
 
+    <section class="metodo-leveza">
+      <div class="container metodo-leveza__content">
+        <div class="metodo-leveza__text">
+          <img src="assets/metodo-leveza-logo-sem fundo.png" alt="Método Leveza" class="metodo-leveza__logo" />
+          <p>
+            Depois de muito estudar e conhecer a prática do nutricionista de consultório, pude perceber alguns padrões de comportamentos que impedem os pacientes de atingirem seus resultados. <br /><br />
+            Por isso, eu desenvolvi o <strong>MÉTODO LEVEZA</strong>, que consiste em 3 fases pelas quais você deve passar até atingir os seus resultados.
+          </p>
+        </div>
+        <div class="metodo-leveza__image">
+          <img src="assets/nathalye-matos2-semfundo.png" alt="Nathalye Matos" />
+        </div>
+        
+      </div>
+    </section>
+
+
     <section class="servicos">
       <div class="container">
-        <h2>Serviços</h2>
+        <h4>O que esperar do</h4>
+        <h5>Meu Método?</h5>
         <div class="cards">
           <div class="card">
-            <h3>Consulta Presencial</h3>
-            <p>Avaliação completa e plano alimentar exclusivo para você.</p>
+            <h3>Plano Alimentar Personalizado e Didático</h3>
+            <p>Em todas as consultas montaremos juntos um plano alimentar que te dê direção. Ele estará 100% de acordo com a sua rotina, hábitos e preferências. Vamos conversar sobre as exceções e como conseguir equilibrar sua alimentação.</p>
           </div>
           <div class="card">
-            <h3>Plano Alimentar</h3>
-            <p>Planos personalizados conforme suas metas, rotina e preferências.</p>
+            <h3>Avaliação Nutricional</h3>
+            <p>Presencial: Em todas as consultas será realizada a aferição do seu peso e contará com o uso da bioimpedância e/ou adipômetro para acompanhamento de massa magra, gordura corporal e visceral.<br>
+            Online: Você receberá um manual de como fazer sua avaliação física em casa e quais dados você precisa me enviar, assim irei analisar em todas as consultas a evolução da sua composição corporal.</p>
           </div>
           <div class="card">
-            <h3>Acompanhamento</h3>
-            <p>Suporte constante para evolução, ajustes e motivação.</p>
+            <h3>Acompanhamento Pós Consulta</h3>
+            <p>Estarei pertinho de você pelo WhatsApp, pra tirar dúvidas, ajustar o que for necessário, acompanhar sua evolução e te enviar materiais de apoio sempre que precisar. Além disso, você terá acesso ao aplicativo exclusivo da Nutri com acesso à sua avaliação física, plano alimentar, receitas, agenda e todas as informações que você precisará ao longo do nosso acompanhamento.</p>
           </div>
         </div>
       </div>
