Commit correção css

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section class="servicos">
       <div class="container">
-        <h4>O que esperar do</h4>
+        <h4>O que você pode esperar do</h4>
         <h5>Meu Método?</h5>
         <div class="cards">
           <div class="card">
@@ -76,7 +76,7 @@
     <section class="agendamentos" id="contato">
       <div class="container">
         <h2>Agendamentos</h2>
-        <p>Entre em contato para marcar sua consulta e dar o primeiro passo para uma vida mais saudável.</p>
+        <p>Entre em contato para marcar sua consulta e dar o primeiro passo para uma vida mais saudável.</p><br>
         <a href="https://wa.me/5511973883315" target="_blank" class="btn">Entrar em contato</a>
       </div>
     </section>
@@ -91,6 +91,7 @@
 
     <section class="instagram-section">
         <div class="container">
+            
             <h2 class="instagram-link">
                 <i class="fab fa-instagram fa-2x"></i>
             </h2>
